--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,18 @@
 title=Share Session Management System
 appTitle = App Title
 appDescription=App Description
+
+#Session Detail
+OBJECTPAGESECTION_SESSIONDETAIL_SESSIONDETAIL=SESSION DETAIL
+OBJECTPAGESECTION_SESSIONDETAIL_JOINPERSON=JOIN PERSON
+OBJECTPAGESECTION_SESSIONDETAIL_COMMENTS=COMMENTS
+OBJECTPAGESECTION_SESSIONDETAIL_CREATEBY=Created By
+OBJECTPAGESECTION_SESSIONDETAIL_CATEGORY=Category
+OBJECTPAGESECTION_SESSIONDETAIL_VISIBILITY=Visibility
+OBJECTPAGESECTION_SESSIONDETAIL_LOCATION=Location
+OBJECTPAGESECTION_SESSIONDETAIL_STATUS=Status
+OBJECTPAGESECTION_SESSIONDETAIL_WHEN=When
+OBJECTPAGESECTION_SESSIONDETAIL_PLANNEDDATE=Planned Date
+OBJECTPAGESECTION_SESSIONDETAIL_DESCRIPTION=Description
+OBJECTPAGESECTION_SESSIONDETAIL_ATTACHMENTS=Attachments
+OBJECTPAGESECTION_SESSIONDETAIL_SUMMARY=Summary
