--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,6 +2,40 @@ title=Share Session Management System
 appTitle = App Title
 appDescription=App Description
 
+#Header Fragment
+TEXT_HEADERFRAGMENT_SEARCHPLACEHODER = Search Session(s)
+
+#Home Page
+TITLE_HOME_TITLE = Share Session Management System
+
+TEXT_HOME_SEARCHPLACEHODER = Search Session(s)
+TEXT_HOME_DESCRIPTION = Here you can create and find the sessions you want
+TEXT_HOME_TILEFOOTER = SSMS
+TEXT_HOME_CREATESESSIONSUBHEADER = Create Session
+TEXT_HOME_CREATESESSIONCONTENTTEXT = Create your own share session
+TEXT_HOME_SESSIONLISTSUBHEADER = Existed Sessions
+TEXT_HOME_SESSIONLISTCONTENTTEXT = You can see all the existed sessions
+
+#Create Session
+TITLE_CREATESESSION_NEWSESSION = New Session
+
+LABEL_CREATESESSION_CREATEDBY = Created By
+LABEL_CREATESESSION_VISIBILITY = Visibility
+LABEL_CREATESESSION_TOPIC = Topic * 
+LABEL_CREATESESSION_CATEGORY = Category * 
+LABEL_CREATESESSION_TIME = Planned Time * 
+LABEL_CREATESESSION_DESCRIPTION = Description
+LABEL_CREATESESSION_ATTACHMENT = Attachment
+
+BTN_CREATESESSION_PUBLIC = Public
+BTN_CREATESESSION_PRIVATE = Private
+BTN_CREATESESSION_CREATE = Create
+BTN_CREATESESSION_CANCEL = Cancel
+
+TEXT_CREATESESSION_TOPICPLACEHOLDER = Enter Topic...
+TEXT_CREATESESSION_DESCRIPTIONPLACEHODER = Enter Description...
+TEXT_CREATESESSION_DATEERORRMESSAGE = The selected date must be later than today, please choose another one.
+
 #Session Detail
 OBJECTPAGESECTION_SESSIONDETAIL_SESSIONDETAIL=SESSION DETAIL
 OBJECTPAGESECTION_SESSIONDETAIL_JOINPERSON=JOIN PERSON
