--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -50,3 +50,15 @@ OBJECTPAGESECTION_SESSIONDETAIL_PLANNEDDATE=Planned Date
 OBJECTPAGESECTION_SESSIONDETAIL_DESCRIPTION=Description
 OBJECTPAGESECTION_SESSIONDETAIL_ATTACHMENTS=Attachments
 OBJECTPAGESECTION_SESSIONDETAIL_SUMMARY=Summary
+
+#Personal Center
+LABEL_PERSONALCENTER_USERNAME = UserName
+LABEL_PERSONALCENTER_ID = ID:
+LABEL_PERSONALCENTER_EMAIL = Email:
+LABEL_PERSONALCENTER_ROLE = Role:
+LABEL_PERSONALCENTER_TEAM = Team:
+
+TITLE_PERSONALCENTER_CREATESESSION = Create Session
+TITLE_PERSONALCENTER_OWNSESSION = Own Session
+TITLE_PERSONALCENTER_COMMENTEDSESSION = Commented Session
+TITLE_PERSONALCENTER_JOINEDSESSION = Joined Session
