--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -58,6 +58,6 @@ LABEL_PERSONALCENTER_ROLE = Role:
 LABEL_PERSONALCENTER_TEAM = Team:
 
 TITLE_PERSONALCENTER_CREATESESSION = Create Session
-TITLE_PERSONALCENTER_OWNSESSION = Own Session
+TITLE_PERSONALCENTER_OWNSESSION = Owned Session
 TITLE_PERSONALCENTER_COMMENTEDSESSION = Commented Session
 TITLE_PERSONALCENTER_JOINEDSESSION = Joined Session
