Complete the view of OwnSession

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -61,3 +61,15 @@ TITLE_PERSONALCENTER_CREATESESSION = Create Session
 TITLE_PERSONALCENTER_OWNSESSION = Owned Session
 TITLE_PERSONALCENTER_COMMENTEDSESSION = Commented Session
 TITLE_PERSONALCENTER_JOINEDSESSION = Joined Session
+
+#Own Session
+TEXT_OWNSESSION_SESSIONS = Sessions
+TEXT_OWNSESSION_TOPIC = Topic
+TEXT_OWNSESSION_CATEGORY = Category
+TEXT_OWNSESSION_TIME = Time
+TEXT_OWNSESSION_LOCATION = Location
+TEXT_OWNSESSION_STATUS = Status
+TEXT_OWNSESSION_OPEN = open
+TEXT_OWNSESSION_INPROCESS = in process
+TEXT_OWNSESSION_CANCELED = canceled
+TEXT_OWNSESSION_CLOSED = closed
