add view for all controls and set tooltip for header Logo

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,12 @@ appTitle = App Title
 appDescription=App Description
 
 #Header Fragment
+TEXT_HEADERFRAGMENT_LOGOTOOLTIP = Go to Home Page
 TEXT_HEADERFRAGMENT_SEARCHPLACEHODER = Search Session(s)
+
+#Custom Controls
+TITLE_CUSTOMCONTROL_ALLCONTROLS = All Controls
+TITLE_CUSTOMCONTROL_UPLOADCOLLECTION = Upload Collection
 
 #Home Page
 TITLE_HOME_TITLE = Share Session Management System
