fix css of own session

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -76,5 +76,5 @@ TEXT_OWNSESSION_LOCATION = Location
 TEXT_OWNSESSION_STATUS = Status
 TEXT_OWNSESSION_OPEN = open
 TEXT_OWNSESSION_INPROCESS = in process
-TEXT_OWNSESSION_CANCELED = canceled
+TEXT_OWNSESSION_CANCELED = cancelled
 TEXT_OWNSESSION_CLOSED = closed
