--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,6 +5,9 @@ appDescription=App Description
 #Header Fragment
 TEXT_HEADERFRAGMENT_LOGOTOOLTIP = Go to Home Page
 TEXT_HEADERFRAGMENT_SEARCHPLACEHODER = Search Session(s)
+TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP = Read Notifications
+TEXT_HEADERFRAGMENT_NEWSESSIONTOOLTIP = Create New Session
+TEXT_HEADERFRAGMENT_SELFCENTERTOOLTIP = Self Center
 
 #Custom Controls
 TITLE_CUSTOMCONTROL_ALLCONTROLS = All Controls
