--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -74,7 +74,7 @@ TEXT_OWNSESSION_CATEGORY = Category
 TEXT_OWNSESSION_TIME = Time
 TEXT_OWNSESSION_LOCATION = Location
 TEXT_OWNSESSION_STATUS = Status
-TEXT_OWNSESSION_OPEN = open
-TEXT_OWNSESSION_INPROCESS = in process
-TEXT_OWNSESSION_CANCELED = cancelled
-TEXT_OWNSESSION_CLOSED = closed
+TEXT_OWNSESSION_OPEN = Open
+TEXT_OWNSESSION_INPROCESS = In Progress
+TEXT_OWNSESSION_CANCELED = Cancelled
+TEXT_OWNSESSION_CLOSED = Completed
