button for notifications

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,7 +5,8 @@ appDescription=App Description
 #Header Fragment
 TEXT_HEADERFRAGMENT_LOGOTOOLTIP = Go to Home Page
 TEXT_HEADERFRAGMENT_SEARCHPLACEHODER = Search Session(s)
-TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP = Read Notifications
+TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP = All Notifications
+TEXT_HEADERFRAGMENT_NOTIFICATIONUNREADTOOLTIP = You Have Unread Notifications
 TEXT_HEADERFRAGMENT_NEWSESSIONTOOLTIP = Create New Session
 TEXT_HEADERFRAGMENT_SELFCENTERTOOLTIP = Self Center
 
