--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -75,6 +75,7 @@ TITLE_PERSONALCENTER_JOINEDSESSION = Joined Session
 TEXT_OWNSESSION_SESSIONS = Sessions
 TEXT_OWNSESSION_TOPIC = Topic
 TEXT_OWNSESSION_CATEGORY = Category
+TEXT_OWNSESSION_VISIBILITY = Visibility
 TEXT_OWNSESSION_TIME = Time
 TEXT_OWNSESSION_LOCATION = Location
 TEXT_OWNSESSION_STATUS = Status
