lily chang detail page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -60,6 +60,11 @@ OBJECTPAGESECTION_SESSIONDETAIL_DESCRIPTION=Description
 OBJECTPAGESECTION_SESSIONDETAIL_ATTACHMENTS=Attachments
 OBJECTPAGESECTION_SESSIONDETAIL_SUMMARY=Summary
 
+OBJECTPAGESECTION_SESSIONDETAIL_DIALOG_AUTHOR=Author
+OBJECTPAGESECTION_SESSIONDETAIL_DIALOG_CREATED=Created
+OBJECTPAGESECTION_SESSIONDETAIL_DIALOG_COMMENT=Comment
+
+
 #Personal Center
 LABEL_PERSONALCENTER_ID = ID:
 LABEL_PERSONALCENTER_EMAIL = Email:
