add the i18n to controller and add the function in component for loading i18n in popup

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -93,3 +93,10 @@ TEXT_OWNSESSION_CLOSED = Completed
 TITLE_NOTIFICATION_ALL = All
 TITLE_NOTIFICATION_UNREAD = Unread
 TITLE_NOTIFY = Notice
+TITLE_DIALOG = Confirm
+CONTENT_DIALOG = Are you sure you want to delete this notification?
+BUTTON_LEFT_DIALOG = OK
+MESSAGE_DIALOG_SUCCESS = Deleted successfully!
+MESSAGE_DIALOG_FAILED = Delete failed.
+BUTTON_RIFGT_DIALOG = Cancel
+MESSAGE_SPLIT_PAGE = Notification page can't be found
