improve the standar of codes

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -79,6 +79,7 @@ TITLE_PERSONALCENTER_JOINEDSESSION = Joined Session
 #Own Session
 TEXT_OWNSESSION_SESSIONS = Sessions
 TEXT_OWNSESSION_TOPIC = Topic
+TEXT_OWNSESSION_OWNER = Owner
 TEXT_OWNSESSION_CATEGORY = Category
 TEXT_OWNSESSION_VISIBILITY = Visibility
 TEXT_OWNSESSION_TIME = Time
